add doc and model
