# controllers/domain.go
@@ -5,17 +5,6 @@ import (
 "net/http"
 )
 
-
-// GetDomains godoc
-// @Tags Domain
-// @Summary Get all domains
-// @Description Get all domains
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} domainResponse
-// @Failure 401 {object} domainResponse
-// @Failure 500 {object} domainResponse
-// @Router /api/v1/domains [get]
 func GetDomains(c *gin.Context) {
 	c.JSON(http.StatusOK,gin.H{"domains":"aaaaa"})
 }
